# lightfall-logbook

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: deploy.sh  lightfall-logbook.service  lucid-logbook.service
docs/superpowers/plans/: 2026-05-18-mint-endpoint.md
src/lightfall_logbook/: __init__.py  api.py  apikeys.py  app.py  auth.py  events.py  local_store.py  models.py
src/lucid_logbook/: api.py  apikeys.py  app.py  auth.py  image_store.py  local_store.py  models.py
tests/: test_apikeys.py  test_authz_scoping.py  test_event_notifications.py  test_events.py  test_events_app.py  test_image_api.py  test_image_fragment_lifecycle.py  test_image_store.py  test_settings_api.py  test_user_profile_flow.py  test_user_settings_model.py
