[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightfall-logbook"
version = "0.1.0"
description = "Backend service for the Lightfall experiment logbook"
requires-python = ">=3.11"
dependencies = [
    "litestar>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "loguru",
    "uvicorn[standard]",
    "httpx",
    "nats-py>=2.6",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29"]
keycloak = ["PyJWT[crypto]>=2.8"]
all = ["asyncpg>=0.29", "PyJWT[crypto]>=2.8"]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Litestar requires call-in-default for parameter markers (e.g. Body(...)).
extend-immutable-calls = ["litestar.params.Body"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
